Fixes position to top center on mobile

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   font-family: 'Quicksand', sans-serif;
   font-size: 18px;
   box-sizing: border-box;
+  background-image: url("etch-a-sketch-bg.jpg");
+  background-size: 860px;
+  background-repeat: no-repeat;
+  background-color: black;
 }
 
 ol, li {
@@ -46,9 +50,6 @@ button:hover{
 }
 
 .section-a{
-  background-image: url("etch-a-sketch-bg.jpg");
-  background-size: 860px;
-  background-repeat: no-repeat;
 }
 
 .section-b{
@@ -69,24 +70,21 @@ button:hover{
   body{
     background-color: black;
     background-image: url("mobile-background.jpg");
-    background-size: cover;
+    background-size: 610px 338px;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: relative;
+    background-position-x: center;
   }
 
   .section-a{
-    max-height: 100%;
-    background-image: none;
-    background-position: center;
-    position: relative;
-
   }
   
   .container{
-    width: 51.75%;
-    height: 88%;
+    width: 300px;
+    height: 300px;
     position: absolute;
-    top: 30px;
+    top: 18px;
+    left: 281px;
     
   }
 }
